--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 	<body>
 	
 	<script src="js/three.min.js"></script>
+	<script src="js/TrackballControls.js"></script>
+	<script src="js/OrbitControls.js"></script>
 	<script src="js/stats.min.js"></script>
 	<script src="js/dat.gui.min.js"></script>
 	<script src="js/jquery.min.js"></script>
+	<script src="js/TweenMax.min.js"></script>
+	<script src="js/sources.js"></script>
 	<script src="js/main.js"></script>
 	</body>
 </html>
