close to a proper starterKit

--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
 	<head>
 		<title>ThreeJS Demo</title>
   		<meta charset="UTF-8">
-  		<link rel="stylesheet" href="css/global.css">
+  		<link rel="stylesheet" href="assets/styles/main.css">
 	</head>
 	<body>
 	
-	<script src="js/three.min.js"></script>
-	<script src="js/TrackballControls.js"></script>
-	<script src="js/OrbitControls.js"></script>
-	<script src="js/stats.min.js"></script>
-	<script src="js/dat.gui.min.js"></script>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/TweenMax.min.js"></script>
-	<script src="js/sources.js"></script>
-	<script src="js/main.js"></script>
+	<script src="assets/js/bundle.js"></script>
 	</body>
 </html>
